--- a/style/style.css
+++ b/style/style.css
@@ -38,9 +38,9 @@ h1, h2, h3, h4, h5, h6, span{
 /*side navbar*/
 body {
 	font-family: "Lato", sans-serif;
-  }
+}
   
-  .sidenav {
+.sidenav {
 	height: 100%;
 	width: 0;
 	position: fixed;
@@ -51,31 +51,40 @@ body {
 	overflow-x: hidden;
 	transition: 0.5s;
 	padding-top: 60px;
-  }
+}
   
-  .sidenav a {
+.sidenav a {
 	padding: 8px 8px 8px 32px;
 	text-decoration: none;
 	font-size: 25px;
 	color: #818181;
 	display: block;
 	transition: 0.3s;
-  }
+}
   
-  .sidenav a:hover {
+.sidenav a:hover {
 	color: #f1f1f1;
-  }
+}
   
-  .sidenav .closebtn {
+.sidenav .closebtn {
 	position: absolute;
 	top: 0;
 	right: 25px;
 	font-size: 36px;
 	margin-left: 50px;
-  }
+}
   
-  @media screen and (max-height: 450px) {
+@media screen and (max-height: 450px) {
 	.sidenav {padding-top: 15px;}
 	.sidenav a {font-size: 18px;}
-  }
+}
 
+.footer{
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	background-color: rgb(52, 152, 219);
+	color: white;
+	text-align: center;
+}
